@@ -1,10 +1,6 @@
 package io.teknek.nibiru.cluster;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.concurrent.TimeUnit;
 
@@ -46,14 +42,14 @@ public class TestCluster extends ServerShutdown {
       Map<String,Object> clusterProperties = new HashMap<>();
       conf.setClusterMembershipProperties(clusterProperties);
       conf.setTransportHost("127.0.0.1");
-      clusterProperties.put(GossipClusterMembership.HOSTS, Arrays.asList("127.0.0.1"));
+      clusterProperties.put(GossipClusterMembership.HOSTS, List.of("127.0.0.1"));
       s[0] = registerServer(new Server(conf));
     }
     {
       Configuration conf = TestUtil.aBasicConfiguration(node2Folder);
       Map<String,Object> clusterProperties = new HashMap<>();
       conf.setClusterMembershipProperties(clusterProperties);
-      clusterProperties.put(GossipClusterMembership.HOSTS, Arrays.asList("127.0.0.1"));
+      clusterProperties.put(GossipClusterMembership.HOSTS, List.of("127.0.0.1"));
       conf.setTransportHost("127.0.0.2");
       s[1] = registerServer(new Server(conf));
     }
@@ -61,27 +57,22 @@ public class TestCluster extends ServerShutdown {
       Configuration conf = TestUtil.aBasicConfiguration(node3Folder);
       Map<String,Object> clusterProperties = new HashMap<>();
       conf.setClusterMembershipProperties(clusterProperties);
-      clusterProperties.put(GossipClusterMembership.HOSTS, Arrays.asList("127.0.0.1"));
+      clusterProperties.put(GossipClusterMembership.HOSTS, List.of("127.0.0.1"));
       conf.setTransportHost("127.0.0.3");
       s[2] = registerServer(new Server(conf));
     }
     for (Server server : s){
       server.init();
     }
-    TUnit.assertThat( new Callable(){
-      public Object call() throws Exception {
-        return s[2].getClusterMembership().getLiveMembers().size();
-      }}).afterWaitingAtMost(11, TimeUnit.SECONDS).isEqualTo(2);
+    TUnit.assertThat((Callable) () -> s[2].getClusterMembership().getLiveMembers().size())
+            .afterWaitingAtMost(11, TimeUnit.SECONDS).isEqualTo(2);
     Assert.assertEquals(2 , s[2].getClusterMembership().getLiveMembers().size());
     Assert.assertEquals("127.0.0.1", s[2].getClusterMembership().getLiveMembers().get(0).getHost());
     MetaDataClient c = new MetaDataClient("127.0.0.1", s[1].getConfiguration().getTransportPort(), 20000, 20000);
     c.createOrUpdateKeyspace("abc", new HashMap<String,Object>(), true);
     for (final Server server : s) {
-      TUnit.assertThat(new Callable() {
-        public Object call() throws Exception {
-          return server.getKeyspaces().get("abc") != null;
-        }
-      }).afterWaitingAtMost(1000, TimeUnit.MILLISECONDS).isEqualTo(true);
+      TUnit.assertThat((Callable) () -> server.getKeyspaces().get("abc") != null)
+              .afterWaitingAtMost(1000, TimeUnit.MILLISECONDS).isEqualTo(true);
     }
     Map<String,Object> stuff = new HashMap<String,Object>();
     stuff.put(StoreMetaData.IMPLEMENTING_CLASS, DefaultColumnFamily.class.getName());
@@ -95,5 +86,6 @@ public class TestCluster extends ServerShutdown {
       }
       Assert.assertEquals(Sets.newHashSet("127.0.0.1", "127.0.0.2", "127.0.0.3"), livingHosts);
     }
+    
   }
 }
